# hossam-py

./: .cline_tools.json  .gitignore  404.html  CNAME  HOSSAM_API.md  README.md  README_NEW.md  Untitled-1.ipynb  [캡스톤-04] 선형회귀ㅣ다이아몬드 가격 결정 구조 분석ㅣ풀이.ipynb  [캡스톤-06] 로지스틱ㅣ사과 품질 분류ㅣ풀이.ipynb  build.bat  gen_api_md.py  gen_ref_pages.py  hossam-py.code-workspace  index.html  mcp_test.ipynb  mkdocs.yml  objects.inv  prompt.md  pull.bat  push.bat  pydoc-markdown.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  students.csv  students.xlsx  test_corr_refactor.py  work.ipynb  다이아몬드 가격 결정 구조 분석ㅣ풀이.ipynb  데이터분석 캡스톤 05ㅣ지리적 불평등 분석(캘리포니아 주택 가격) - California Housing.md  데이터분석 캡스톤 06ㅣ의료 비용 불평등 분석(의료보험 청구 비용) - Insurance.md  배포.md
#old-version/: classification.py  cluster.py  core.py  plot.py  regression.py  tensor.py  util.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docgen.yml  mkdocs-gh-pages.yml  publish-pypi.yml  publish.yml  pypi-publish.yml
_scripts/: gen_api_index.py
api/: index.html
api/SUMMARY/: index.html
api/analysis/: index.html
api/classroom/: index.html
api/data_loader/: index.html
api/gis/: index.html
api/hossam/: index.html
api/hs_classroom/: index.html
api/hs_cluster/: index.html
api/hs_gis/: index.html
api/hs_ml/: index.html
api/hs_plot/: index.html
api/hs_prep/: index.html
api/hs_reg/: index.html
api/hs_stats/: index.html
api/hs_timeserise/: index.html
api/hs_util/: index.html
api/my_classroom/: index.html
api/my_gis/: index.html
api/my_pipeline/: index.html
api/my_plot/: index.html
api/my_prep/: index.html
api/my_qtcheck/: index.html
api/my_stats/: index.html
api/my_util/: index.html
api/plot/: index.html
api/prep/: index.html
api/stats/: index.html
api/util/: index.html
docs/: index.html  index.md  mcp_guide.md
docs/api/: analysis.md  classroom.md  data_loader.md  gis.md  hossam.md  hs_cluster.md  hs_prep.md  hs_reg.md  hs_stats.md  hs_timeseries.md  hs_timeserise.md  my_classroom.md  my_gis.md  my_plot.md  my_qtcheck.md  my_util.md  plot.md  prep.md  stats.md  util.md
docs/api/legacy/: my_ml.md
docs/assets/javascripts/: mermaid-init.js
docs/guides/: GUIDE_INTEGRATION_SUMMARY.md  MCP_SERVER.md  QUICKSTART.md  README.md  VSCODE_COPILOT_SETUP.md  VSCode_COPILOT.md  copilot-prompts.md  hossam_mcp_task_prompt.md  mcp.md  vscode-copilot-integration.md  vscode-settings-sample.md  workflow.md
docs/overview/: architecture.md
guides/: index.html
guides/GUIDE_INTEGRATION_SUMMARY/: index.html
guides/MCP_SERVER/: index.html
guides/QUICKSTART/: index.html
guides/VSCODE_COPILOT_SETUP/: index.html
guides/VSCode_COPILOT/: index.html
guides/copilot-prompts/: index.html
guides/hossam_mcp_task_prompt/: index.html
guides/mcp/: index.html
guides/vscode-copilot-integration/: index.html
guides/vscode-settings-sample/: index.html
guides/workflow/: index.html
hossam/: VIFSelector.py  __init__.py  _cli.py  cli.py  data_loader.py  gis.py  hs_classroom.py  hs_cluster copy.py  hs_cluster.py  hs_gis.py  hs_interaction.py  hs_ml.py  hs_plot.backup.txt  hs_plot.py  hs_plot.txt  hs_prep.py  hs_reg.py  hs_stats.backup.txt  hs_stats.backup2.txt  hs_stats.py  hs_study.py  hs_timeserise.py  hs_util.py  my_classroom.py  my_gis.py  my_logit.py  my_ols.py  my_pipeline.py  my_plot.py  my_prep.py  my_qtcheck.py  my_stats.py  my_util.py  plot.py  prep.py  qtcheck_cli.py  stats.py  util.py
hossam.egg-info/: PKG-INFO
hossam/legacy/: my_cluster.py  my_gis.py  my_ml.py  my_stats.py  my_timeserise.py  old_plot.py
hossam/mcp/: hs_classroom.py  hs_gis.py  hs_plot.py  hs_prep.py  hs_stats.py  hs_timeserise.py  hs_util.py  loader.py  rest_server.py  server.py
mcp_guide/: index.html
overview/architecture/: index.html
search/: search_index.json
