[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hossam"
version = "0.4.24"
description = "Hossam Data Helper"
readme = "README.md"
requires-python = ">=3.11.0"
authors = [{ name = "Lee Kwang-Ho", email = "leekh4232@gmail.com" }]
license = "MIT"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Libraries",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
keywords = ["data", "analysis", "helper", "hossam", "tensorflow"]
dependencies = [
	"tqdm",
	"tabulate",
    "numpy<1.28",
	"pandas<2.2.0",
	"matplotlib",
	"seaborn",
	"requests",
    "bs4",
    "lxml",
	"openpyxl",
	"xlrd",
	"statsmodels",
	"scipy",
	"scikit-learn",
	"pingouin",
	"statannotations",
	"joblib",
	"geopandas",
	"kmodes",
    "pmdarima",
    "prophet",
    "plotly",
    "jenkspy",
    "flask",
    "xgboost",
    "lightgbm",
    "kneed",
    "shap",
    "anywidget"
]

[project.urls]
Homepage = "https://github.com/leekh4232/hossam-py"
Repository = "https://github.com/leekh4232/hossam-py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hossam", "hossam.*"]

[tool.setuptools.package-data]
hossam = ["*.ttf", "*.png"]
