[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hossam"
version = "0.5.1"
description = "Hossam Data Helper"
readme = "README.md"
requires-python = ">=3.11.0,<=3.11.14"
authors = [{ name = "Lee Kwang-Ho", email = "leekh4232@gmail.com" }]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["data", "analysis", "helper", "hossam", "tensorflow"]
dependencies = [
    # Core
    "tqdm",
    "tabulate",
    "numpy>=1.21,<1.27",
    "pandas<2.2",
    "scipy>=1.6.1,<=1.11.4",
    "joblib",
    "scikit-learn<1.5",
    "statsmodels>=0.12.1",
    "requests>=2.27.1",
    "cloudpickle",
    "psutil>=5.9.0",
    "importlib_metadata>=4.12.0",
    "deprecation>=2.1.0",
    "xxhash",

    # Visualization
    "matplotlib<3.8.0",
    "seaborn",
    "plotly>=5.14.0",
    "kaleido>=0.2.1",

    # Data I/O
    "openpyxl",
    "xlrd",
    "lxml",
    "bs4",

    # ML / Statistics
    "pingouin",
    "statannotations",
    "xgboost",
    "lightgbm>=3.0.0",
    "catboost",
    "shap>=0.40",

    # Time series
    "pmdarima>=2.0.4",
    "prophet",

    # Optional but PyCaret 친화
    "imbalanced-learn>=0.12.0,<0.14.0",
    "category-encoders>=2.4.0",
    "yellowbrick>=1.4",

    # 확장
    "geopandas",
    "kmodes",
    "jenkspy",
    "flask",
    "kneed"
]

[project.urls]
Homepage = "https://github.com/leekh4232/hossam-py"
Repository = "https://github.com/leekh4232/hossam-py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hossam", "hossam.*"]

[tool.setuptools.package-data]
hossam = ["*.ttf", "*.png"]
