[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hossam"
version = "0.5.5"
description = "Hossam Data Helper"
readme = "README.md"
requires-python = ">=3.11.0"
authors = [{ name = "Lee Kwang-Ho", email = "leekh4232@gmail.com" }]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["data", "analysis", "helper", "hossam", "scikit-learn", "pandas", "numpy", "matplotlib", "seaborn", "plotly"]
dependencies = [
    # Core
    "tqdm",
    "tabulate",
    "numpy",
    "pandas",
    "scipy",
    "joblib",
    "scikit-learn",
    "statsmodels",
    "requests",
    "cloudpickle",
    "psutil",
    "importlib_metadata",
    "deprecation",
    "xxhash",

    # Visualization
    "matplotlib",
    "seaborn",
    "plotly",
    "kaleido",

    # Data I/O
    "openpyxl",
    "xlrd",
    "lxml",
    "bs4",

    # ML / Statistics
    "pingouin",
    "statannotations",
    "xgboost",
    "lightgbm",
    "catboost",
    "shap",

    # Time series
    "pmdarima",
    "prophet",

    # Optional but PyCaret 친화
    "imbalanced-learn",
    "category-encoders",
    "yellowbrick",

    # 확장
    "geopandas",
    "kmodes",
    "jenkspy",
    "flask",
    "kneed"
]

[project.urls]
Homepage = "https://github.com/leekh4232/hossam-py"
Repository = "https://github.com/leekh4232/hossam-py"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["hossam", "hossam.*"]

[tool.setuptools.package-data]
hossam = ["*.ttf", "*.png"]
